# wasmbuild-demo

./: .gitignore  README.md  demo.ts  deno.json  mod.ts  tsconfig.json
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs
