[package]
name = "wasm_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "=0.2.81", features = ["serde-serialize"] }
js-sys = "0.3.58"
wasm-bindgen-futures = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[dependencies.web-sys]
version = "0.3.58"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]
