[package]
name = "wasm_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Crypto",
    "CryptoKey",
    "CryptoKeyPair",
    "Event",
    "EventTarget"
]
